--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,29 @@
-.container {
-  width: 70%;
-  margin: auto;
-  text-align: center;
-}
-
-.dice {
-  text-align: center;
-  display: inline-block;
-
-}
-
 body {
-  background-color: #393E46;
+  background-color: #393e46;
 }
 
 h1 {
   margin: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
-  color: #4ECCA3;
+  color: #4ecca3;
+}
+
+button {
+  font-family: "Lobster", cursive;
+  font-weight: bold;
+  font-size: 2rem;
+  position: relative;
+  text-align: center;
+  color: #4ecca3;
 }
 
 p {
   font-size: 2rem;
-  color: #4ECCA3;
-  font-family: 'Indie Flower', cursive;
+  font-weight: 500;
+  color: #4ecca3;
+  font-family: "Indie Flower", cursive;
 }
 
 img {
@@ -34,8 +32,23 @@ img {
 
 footer {
   margin-top: 5%;
-  color: #EEEEEE;
+  color: #eeeeee;
   text-align: center;
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
+}
 
+.container {
+  width: 70%;
+  margin: auto;
+  text-align: center;
+}
+
+.players {
+  position: relative;
+  margin-top: 50px;
+}
+
+.dice {
+  text-align: center;
+  display: inline-block;
 }
